--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/RandomUser04329/Restaurant-Test-App/issues"
   },
-  "homepage": "https://github.com/RandomUser04329/Restaurant-Test-App#readme"
+  "homepage": "https://github.com/RandomUser04329/Restaurant-Test-App#readme",
+  "devDependencies": {
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.5",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  }
 }
